--- a/css/style.css
+++ b/css/style.css
@@ -59,7 +59,7 @@ body {
 }
 
 /*fundo gradiente*/
-div.gradiente{
+.gradiente{
   width: 100%;
   background: linear-gradient( #7E649F 0%, #130D36 100%);
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
@@ -126,13 +126,62 @@ div.gradiente{
   font-family: 'Boton';
 }
 
-.aside {
-  background-color: #33b5e5;
-  padding: 15px;
-  color: #ffffff;
+.negrito{
+  font-family: 'Boton Bold';
+}
+
+.inovacao{
+  padding-bottom: 3rem;
+}
+
+.inovar p{
+  font-family: 'Boton Bold';
+  font-style: normal;
+  font-weight: 500;
+  font-size: 60px;
+  line-height: 72px;
   text-align: center;
-  font-size: 14px;
-  box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
+  letter-spacing: 0.02em;
+
+  color: #FFFFFF;
+}
+
+.caixa{
+  padding-bottom: 3rem;
+}
+
+.row{
+  padding: 1rem;
+}
+
+.texto-direita{
+  font-family: 'Boton Bold';
+  font-style: normal;
+  font-weight: 500;
+  font-size: 42px;
+  line-height: 50px;
+  text-align: right;
+  margin: 1rem;
+  width: 100%;
+  color: #FFFFFF;
+}
+
+.texto{
+  font-family: 'Boton';
+  font-size: 26px;
+  line-height: 26px;
+  text-align: justify;
+  padding: 3rem;
+  width: 100%;
+  /* or 100% */
+  color: #FFFFFF;
+}
+
+div.vertical-line{
+  border: 2px solid #FFFFFF;
+  transform: rotate(180deg);
+  margin: 0rem 3rem 0rem 1rem;
+  
 }
 
 /* Footer*/
